--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" id="nav-p">
         <div class="container-fluid" id="contenerdor-n">
             <a class="navbar-brand" href="#">
-                <img src="img/ini.jpg" alt="logo"  height="50">
+                <img src="https://img.freepik.com/vector-premium/fondo-logo-vector-flor_53272-37.jpg?w=2000" alt="logo"  height="50">
             </a>
             <button class="navbar-toggler" type="button"  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <svg xmlns="http://www.w3.org/2000/svg" height="3rem" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor">
